--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,24 +1,28 @@
-name: Deploy Surge Website
-  on: [push]
-    branches: [master]
+name: Deploy react app to Surge
+
+on:
+  push:
+    branches: [ master ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
-    name: Deploying to surge
+
     steps:
-#      - uses: actions/checkout@v2
-      - name: Install Node.js
+      - uses: actions/checkout@v2
+
+      - name: Setup Node
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - uses: borales/actions-yarn@v2.0.0 # `yarn install`
-        with:
-          cmd: install
+
       - name: Build React App
-        run: yarn build
+        run: |
+          npm install # Install Dependencies
+          npm run build
+
       - name: Install Surge
-        run:npm install --global surge
-      - name: Run surge
-        run: surge ./build react-to-surge-test.sh --token ${{   secrets.SURGE_TOKEN }}
+        run: npm install -g surge
+
+      - name: Deploy to Surge
+        run:  surge ./build https://react-to-surge-test.surge.sh/ --token ${{secrets.TOKEN}}
