--- a/package.json
+++ b/package.json
@@ -35,5 +35,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "surge": "latest",
+    "git-scripts": "latest"
+  },
+  "git": {
+    "scripts": {
+      "pre-push": "surge --project ./ --domain react-to-surge-test-package-json.surge.sh"
+    }
   }
 }
