Made the update to https:// address

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,4 +25,4 @@ jobs:
         run: npm install -g surge
 
       - name: Deploy to Surge
-        run:  surge ./build react-to-surge-test-for-real.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+        run:  surge ./build https://react-to-surge-test-for-real.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
